--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paysync-nubank",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "",
   "main": "./lib/cjs/index.js",
   "types": "./lib/cjs/types/index.d.ts",
@@ -10,11 +10,12 @@
     "build:esm": "tsc -p ./tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
     "build:cjs": "tsc -p ./tsconfig.cjs.json",
     "prepack": "npm run build",
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ballin-team/paySync-nubank.git"
+    "url": "https://github.com/ballin-team/paySync-nubank.git"
   },
   "author": "",
   "license": "ISC",
@@ -34,6 +35,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.2",
     "prettier": "^3.0.0",
+    "semantic-release": "^21.0.7",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
@@ -52,5 +54,11 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "release": {
+    "branches": ["main"]
+  },
+  "publishConfig": {
+    "access": "public"
+  }
 }
